--- a/01.Applicatons/MemorablePlaces/MemorablePlaces/Base.lproj/Main.storyboard
+++ b/01.Applicatons/MemorablePlaces/MemorablePlaces/Base.lproj/Main.storyboard
@@ -1,26 +1,135 @@
 <?xml version="1.0" encoding="UTF-8" standalone="no"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="11134" systemVersion="15F34" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" colorMatched="YES" initialViewController="BYZ-38-t0r">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="11521.1" systemVersion="15G31" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" colorMatched="YES" initialViewController="kWt-LJ-Ph8">
     <dependencies>
-        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="11106"/>
+        <deployment identifier="iOS"/>
+        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="11517.1"/>
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
     <scenes>
-        <!--View Controller-->
-        <scene sceneID="tne-QT-ifu">
+        <!--View-->
+        <scene sceneID="O7q-Wt-Dx2">
             <objects>
-                <viewController id="BYZ-38-t0r" customClass="ViewController" customModuleProvider="target" sceneMemberID="viewController">
+                <viewController title="View" id="NEW-z8-bxn" customClass="ViewPlaceVC" customModule="MemorablePlaces" customModuleProvider="target" sceneMemberID="viewController">
                     <layoutGuides>
-                        <viewControllerLayoutGuide type="top" id="y3c-jy-aDJ"/>
-                        <viewControllerLayoutGuide type="bottom" id="wfy-db-euE"/>
+                        <viewControllerLayoutGuide type="top" id="Mac-rX-4IN"/>
+                        <viewControllerLayoutGuide type="bottom" id="KPC-BG-Luz"/>
                     </layoutGuides>
-                    <view key="view" contentMode="scaleToFill" id="8bC-Xf-vdC">
+                    <view key="view" contentMode="scaleToFill" id="Hgm-Qv-Ud1">
                         <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
-                        <color key="backgroundColor" red="1" green="1" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+                        <subviews>
+                            <mapView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" mapType="standard" translatesAutoresizingMaskIntoConstraints="NO" id="6EK-Yi-wL2">
+                                <connections>
+                                    <outlet property="delegate" destination="NEW-z8-bxn" id="kz1-X4-rqf"/>
+                                </connections>
+                            </mapView>
+                        </subviews>
+                        <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+                        <constraints>
+                            <constraint firstItem="6EK-Yi-wL2" firstAttribute="top" secondItem="Mac-rX-4IN" secondAttribute="bottom" id="SuT-aA-AgT"/>
+                            <constraint firstItem="6EK-Yi-wL2" firstAttribute="bottom" secondItem="KPC-BG-Luz" secondAttribute="top" id="edE-B9-TCM"/>
+                            <constraint firstAttribute="trailing" secondItem="6EK-Yi-wL2" secondAttribute="trailing" id="lbl-5c-qMT"/>
+                            <constraint firstItem="6EK-Yi-wL2" firstAttribute="leading" secondItem="Hgm-Qv-Ud1" secondAttribute="leading" id="zm5-ak-Kwa"/>
+                        </constraints>
                     </view>
+                    <connections>
+                        <outlet property="map" destination="6EK-Yi-wL2" id="Eel-wQ-0ej"/>
+                    </connections>
                 </viewController>
-                <placeholder placeholderIdentifier="IBFirstResponder" id="dkx-z0-nzr" sceneMemberID="firstResponder"/>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="0Xj-Uy-hGC" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
+            <point key="canvasLocation" x="1662" y="-165"/>
+        </scene>
+        <!--Add-->
+        <scene sceneID="0Ps-Ox-Ov8">
+            <objects>
+                <viewController title="Add" id="clw-iO-AnS" customClass="AddPlaceVC" customModule="MemorablePlaces" customModuleProvider="target" sceneMemberID="viewController">
+                    <layoutGuides>
+                        <viewControllerLayoutGuide type="top" id="fNa-f9-mL0"/>
+                        <viewControllerLayoutGuide type="bottom" id="G63-to-V65"/>
+                    </layoutGuides>
+                    <view key="view" contentMode="scaleToFill" id="sBi-Ac-EZn">
+                        <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
+                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <subviews>
+                            <mapView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" mapType="standard" translatesAutoresizingMaskIntoConstraints="NO" id="QMo-kH-Mg3">
+                                <connections>
+                                    <outlet property="delegate" destination="clw-iO-AnS" id="GEP-Nh-9Yf"/>
+                                </connections>
+                            </mapView>
+                        </subviews>
+                        <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+                        <constraints>
+                            <constraint firstAttribute="trailing" secondItem="QMo-kH-Mg3" secondAttribute="trailing" id="24Z-jr-suE"/>
+                            <constraint firstItem="QMo-kH-Mg3" firstAttribute="top" secondItem="fNa-f9-mL0" secondAttribute="bottom" id="Xp3-vY-uTq"/>
+                            <constraint firstItem="QMo-kH-Mg3" firstAttribute="leading" secondItem="sBi-Ac-EZn" secondAttribute="leading" id="cnA-jq-bk0"/>
+                            <constraint firstItem="QMo-kH-Mg3" firstAttribute="bottom" secondItem="G63-to-V65" secondAttribute="top" id="wi5-lw-vhb"/>
+                        </constraints>
+                    </view>
+                    <connections>
+                        <outlet property="map" destination="QMo-kH-Mg3" id="Hmd-57-KKd"/>
+                    </connections>
+                </viewController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="ic3-sg-qA3" userLabel="First Responder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="1663" y="-849"/>
+        </scene>
+        <!--Places-->
+        <scene sceneID="llB-c2-C4W">
+            <objects>
+                <tableViewController title="Places" id="zFl-dB-7Lx" customClass="PlacesVC" customModule="MemorablePlaces" customModuleProvider="target" sceneMemberID="viewController">
+                    <tableView key="view" clipsSubviews="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" dataMode="prototypes" style="plain" separatorStyle="default" rowHeight="44" sectionHeaderHeight="28" sectionFooterHeight="28" id="uT1-Js-xG4">
+                        <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
+                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+                        <prototypes>
+                            <tableViewCell clipsSubviews="YES" contentMode="scaleToFill" selectionStyle="default" indentationWidth="10" reuseIdentifier="Cell" id="T5h-ga-Fe1">
+                                <rect key="frame" x="0.0" y="92" width="375" height="44"/>
+                                <autoresizingMask key="autoresizingMask"/>
+                                <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" tableViewCell="T5h-ga-Fe1" id="3pZ-no-iYi">
+                                    <frame key="frameInset" width="375" height="43"/>
+                                    <autoresizingMask key="autoresizingMask"/>
+                                </tableViewCellContentView>
+                                <connections>
+                                    <segue destination="NEW-z8-bxn" kind="show" identifier="ViewVCSegue" id="kDu-v4-g84"/>
+                                </connections>
+                            </tableViewCell>
+                        </prototypes>
+                        <connections>
+                            <outlet property="dataSource" destination="zFl-dB-7Lx" id="JY2-TR-Axl"/>
+                            <outlet property="delegate" destination="zFl-dB-7Lx" id="uQP-a4-5D6"/>
+                        </connections>
+                    </tableView>
+                    <navigationItem key="navigationItem" title="Places" id="ntt-iv-BMS">
+                        <barButtonItem key="rightBarButtonItem" systemItem="add" id="9kD-S0-JOM">
+                            <connections>
+                                <segue destination="clw-iO-AnS" kind="show" identifier="AddVCSegue" id="ECn-Yt-XbH"/>
+                            </connections>
+                        </barButtonItem>
+                    </navigationItem>
+                    <connections>
+                        <outlet property="table" destination="uT1-Js-xG4" id="ax7-Wg-NIb"/>
+                    </connections>
+                </tableViewController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="5Ev-Tc-iGK" userLabel="First Responder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="734" y="-545"/>
+        </scene>
+        <!--Navigation Controller-->
+        <scene sceneID="iJg-IT-xn6">
+            <objects>
+                <navigationController id="kWt-LJ-Ph8" sceneMemberID="viewController">
+                    <navigationBar key="navigationBar" contentMode="scaleToFill" id="rMY-O0-6qR">
+                        <rect key="frame" x="0.0" y="0.0" width="375" height="44"/>
+                        <autoresizingMask key="autoresizingMask"/>
+                    </navigationBar>
+                    <connections>
+                        <segue destination="zFl-dB-7Lx" kind="relationship" relationship="rootViewController" id="ebh-vG-Cea"/>
+                    </connections>
+                </navigationController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="Fuy-El-hOI" userLabel="First Responder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="-98" y="-544"/>
         </scene>
     </scenes>
 </document>
